--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.css">
 
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
@@ -52,7 +53,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="" /></a>
+                        <a class="" href="index.html"><img src="img/raffles-logo.png" class="logomob" alt="raffles" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -83,9 +84,9 @@
                                 <li class="menu-item menu-item-has-children"><a href="#">Language</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item webbox"><a href="index-ar.html">Arabic</a><img
-                                                src="img/sa-flag.png" width="30" alt="" class="mrg16"></li>
+                                                src="img/sa-flag.png" width="30" alt="Arabic" class="mrg16"></li>
                                         <li class="menu-item webbox"><a href="index.html">English</a><img
-                                                src="img/uk-flag.png" width="28" alt="" class="mrg17"></li>
+                                                src="img/uk-flag.png" width="28" alt="English" class="mrg17"></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -115,7 +116,7 @@
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="index-ar.html"><img
-                                            src="img/sa-flag.png" width="35" alt=""></a></li>
+                                            src="img/sa-flag.png" width="35" alt="Arabic"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -130,7 +131,7 @@
                         <div class="kingster-logo  kingster-item-pdlr pbtm">
                             <div class="kingster-logo-inner">
                                 <a class="" href="index.html"><img class="headerlogo" src="img/raffles-logo.png"
-                                        alt="" /></a>
+                                        alt="raffles" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
@@ -196,7 +197,7 @@
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
                                                         data-param10="" data-description=""> <img src="img/44.webp"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
+                                                            alt="first slide" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
                                                             data-no-retina>
@@ -234,7 +235,7 @@
                                                         data-param2="" data-param3="" data-param4="" data-param5=""
                                                         data-param6="" data-param7="" data-param8="" data-param9=""
                                                         data-param10="" data-description=""> <img src="img/13-02.webp"
-                                                            alt="" title="slider-hp2-2" width="1800" height="958"
+                                                            alt="second slide" title="slider-hp2-2" width="1800" height="958"
                                                             data-bgposition="center center" data-bgfit="cover"
                                                             data-bgrepeat="no-repeat" class="rev-slidebg"
                                                             data-no-retina>
@@ -324,7 +325,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 1-01.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 1-01.png" alt="Foundation Studies"
                                                             width="40" height="40" title="hp2-col-1-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -357,7 +358,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 2-02.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 2-02.png" alt="Visual Communication"
                                                             width="41" height="41" title="hp2-col-4-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -392,7 +393,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 3-03.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 3-03.png" alt="Fashion Marketing"
                                                             width="49" height="45" title="hp2-col-2-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -426,7 +427,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 4-04.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 4-04.png" alt="Interior Design"
                                                             width="50" height="44" title="hp2-col-3-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -459,7 +460,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 5-05.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 5-05.png" alt="Jewelry Design"
                                                             width="49" height="45" title="hp2-col-2-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -492,7 +493,7 @@
                                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-center-align gdlr-core-with-caption gdlr-core-item-pdlr"
                                                     style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image"
-                                                        style="margin-bottom: 20px;"><img src="img/icon 6-06.png" alt=""
+                                                        style="margin-bottom: 20px;"><img src="img/icon 6-06.png" alt="Fashion Design"
                                                             width="41" height="41" title="hp2-col-4-icon" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -529,7 +530,7 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
                                                         style="border-width: 0px;"><img src="img/raffles-logo.png"
-                                                            class="imgmob1" alt="" width="262" height="35"
+                                                            class="imgmob1" alt="raffles logo" width="262" height="35"
                                                             title="logo-white" /></div>
                                                 </div>
                                             </div>
@@ -615,7 +616,7 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
                                                         style="border-width: 0px;z-index: 999 ;position: relative ;">
-                                                        <img src="img/8-01.png" width="1320" height="218" alt="" />
+                                                        <img src="img/8-01.png" width="1320" height="218" alt="raffles University" />
                                                     </div>
                                                 </div>
                                             </div>
@@ -642,7 +643,7 @@
                                             <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-rectangle"
                                                 id="div_1dd7_76">
                                                 <a class=" gdlr-core-js " href="img/videos/raffles3.mp4"><img
-                                                        src="img/icon-play.png" alt="" width="82" height="82"
+                                                        src="img/icon-play.png" alt="play" width="82" height="82"
                                                         title="icon-play" /></a>
                                             </div>
                                             <!-- <div class="gdlr-core-tab-item-image  gdlr-core-active" data-tab-id="1">
@@ -705,7 +706,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/course.webp" alt="" style="width: 80%;"
+                                                <img src="img/course.webp" alt="course" style="width: 80%;"
                                                     class="vision-img aos-init aos-animate width1 scale1"
                                                     data-aos="fade-right" data-aos-duration="800">
                                             </div>
@@ -780,7 +781,7 @@
                                                     data-aos="fade-right" data-aos-duration="500" data-aos-delay="400"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
-                                                        style="margin-bottom: 35px;"><img src="img/icon 7-07.png" alt=""
+                                                        style="margin-bottom: 35px;"><img src="img/icon 7-07.png" alt="A Vibrant Campus"
                                                             width="41" height="41" title="col-icon-1" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -814,7 +815,7 @@
                                                     data-aos="fade-right" data-aos-duration="500" data-aos-delay="200"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
-                                                        style="margin-bottom: 31px;"><img src="img/icon 8-08.png" alt=""
+                                                        style="margin-bottom: 31px;"><img src="img/icon 8-08.png" alt="Life in Riyadh"
                                                             width="43" height="45" title="col-icon-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -849,7 +850,7 @@
                                                     data-aos="fade-right" data-aos-duration="500"
                                                     style="padding-bottom: 30px;">
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image mrg5"
-                                                        style="margin-bottom: 33px;"><img src="img/icon 9-09.png" alt=""
+                                                        style="margin-bottom: 33px;"><img src="img/icon 9-09.png" alt="Scholarships"
                                                             width="40" height="43" title="col-icon-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap">
@@ -960,7 +961,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.png" style="width: 100%;" alt="">
+                        <img src="img/MAP-01.png" style="width: 100%;" alt="map">
                     </div>
 
                 </div>
@@ -998,7 +999,7 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 photo-footer">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
-                                    <p><img src="img/raffles-logo3-01.png" alt=""></p>
+                                    <p><img src="img/raffles-logo3-01.png" alt="raffles logo"></p>
                                 </div>
                             </div>
                         </div>
