--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html" aria-label="raffles"><img src="img/raffles-logo.png" class="logomob" alt="raffles" /></a>
+                        <a class="" href="index.html" aria-label="raffles"><img src="img/raffles-logo.png" class="logomob" alt="raffles" width="120" height="50"/></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -706,7 +706,7 @@
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                             <div class="gdlr-core-pbf-element">
-                                                <img src="img/course.webp" alt="course" style="width: 80%;"
+                                                <img src="img/course.webp" alt="course" style="width: 80%;" width="530" height="635"
                                                     class="vision-img aos-init aos-animate width1 scale1"
                                                     data-aos="fade-right" data-aos-duration="800">
                                             </div>
@@ -894,27 +894,27 @@
                                         style="font-size: 35px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;text-align: center;">
                                         Our success partners</h3>
                                     <section class="customer-logos slider">
-                                        <div class="slide"><img src="img/logos-01.png">
+                                        <div class="slide"><img src="img/logos-01.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-02.png">
+                                        <div class="slide"><img src="img/logos-02.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-03.png">
+                                        <div class="slide"><img src="img/logos-03.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-04.png">
+                                        <div class="slide"><img src="img/logos-04.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-05.png">
+                                        <div class="slide"><img src="img/logos-05.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-06.png">
+                                        <div class="slide"><img src="img/logos-06.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-07.png">
+                                        <div class="slide"><img src="img/logos-07.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-08.png">
+                                        <div class="slide"><img src="img/logos-08.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-09.png">
+                                        <div class="slide"><img src="img/logos-09.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-10.png">
+                                        <div class="slide"><img src="img/logos-10.png" width="140" height="140">
                                         </div>
-                                        <div class="slide"><img src="img/logos-11.png">
+                                        <div class="slide"><img src="img/logos-11.png" width="140" height="140">
                                         </div>
                                     </section>
 
@@ -961,7 +961,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.png" style="width: 100%;" alt="map">
+                        <img src="img/MAP-01.png" style="width: 100%;" alt="map" width="1520" height="900">
                     </div>
 
                 </div>
@@ -999,7 +999,7 @@
                         <div class="kingster-footer-column kingster-item-pdlr kingster-column-15 photo-footer">
                             <div id="text-2" class="widget widget_text kingster-widget">
                                 <div class="textwidget">
-                                    <p><img src="img/raffles-logo3-01.png" alt="raffles logo"></p>
+                                    <p><img src="img/raffles-logo3-01.png" alt="raffles logo" width="250" height="100"></p>
                                 </div>
                             </div>
                         </div>
