--- a/index.html
+++ b/index.html
@@ -894,27 +894,27 @@
                                         style="font-size: 35px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;text-align: center;">
                                         Our success partners</h3>
                                     <section class="customer-logos slider">
-                                        <div class="slide"><img src="img/logos-01.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-01.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-02.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-02.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-03.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-03.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-04.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-04.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-05.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-05.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-06.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-06.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-07.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-07.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-08.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-08.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-09.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-09.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-10.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-10.png" width="140" height="140" alt="logo">
                                         </div>
-                                        <div class="slide"><img src="img/logos-11.png" width="140" height="140">
+                                        <div class="slide"><img src="img/logos-11.png" width="140" height="140" alt="logo">
                                         </div>
                                     </section>
 
