--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="index-ar.html" aria-label="arabic"><img
-                                            src="img/sa-flag.png" width="35" alt="Arabic"></a></li>
+                                            src="img/sa-flag.png" width="35" height="25" alt="Arabic"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr pbtm">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html" aria-label="raffles"><img class="headerlogo" src="img/raffles-logo.png"
+                                <a class="" href="index.html" aria-label="raffles"><img class="headerlogo" src="img/raffles-logo.png" width="150" height="60"
                                         alt="raffles" /></a>
                             </div>
                         </div>
