--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Raffles Institute</title>
 
-    <meta name="Raffles Institue"
+    <meta name="description"
         content="Raffles Design Institute provides you with a global high-quality education. From your place you will get the best ever.">
 
     <link rel="canonical" href="https://www.rafflesksa.com/" aria-label="raffles">
