--- a/index-ar.html
+++ b/index-ar.html
@@ -518,7 +518,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper pmob1" style="padding: 125px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image: url(img/B34A0438.jpg);background-size: cover;background-repeat: no-repeat;">
+                            style="background-image: url(img/B34A0438.webp);background-size: cover;background-repeat: no-repeat;">
                             <div class="overlay"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -632,7 +632,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 125px 0px 85px 0px;">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/campus-building.png) ;background-size: cover ;background-position: center ;filter: brightness(0.2) contrast(0.85);"
+                                style="background-image: url(img/campus-building.webp) ;background-size: cover ;background-position: center ;filter: brightness(0.2) contrast(0.85);"
                                 data-parallax-speed="0.1"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -968,7 +968,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.png" style="width: 100%;" alt="">
+                        <img src="img/MAP-01.webp" style="width: 100%;" alt="">
                     </div>
 
                 </div>
