--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/2-01.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/2-01.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -377,7 +377,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/3-02.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/3-02.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -414,7 +414,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;"
+                                                style="background-image: url(img/4-03.webp) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -450,7 +450,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/5-04.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/5-04.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -485,7 +485,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/4-03.png) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;filter: contrast(0.8) ;"
+                                                style="background-image: url(img/6-05.webp) ;background-size: cover ;background-position: center ;background-color: #e6e6e6;filter: contrast(0.8) ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -520,7 +520,7 @@
                                         data-sync-height-center>
                                         <div class="gdlr-core-pbf-background-wrap">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                                style="background-image: url(img/7-06.png) ;background-size: cover ;background-position: center ;"
+                                                style="background-image: url(img/7-06.webp) ;background-size: cover ;background-position: center ;"
                                                 data-parallax-speed="0.1"></div>
                                         </div>
                                         <div
@@ -554,7 +554,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper pmob1" style="padding: 125px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image: url(img/B34A0438.jpg);background-size: cover;background-repeat: no-repeat;">
+                            style="background-image: url(img/B34A0438.webp);background-size: cover;background-repeat: no-repeat;">
                             <div class="overlay"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -654,7 +654,7 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round"
                                                         style="border-width: 0px;z-index: 999 ;position: relative ;">
-                                                        <img src="img/8-01.png" width="1320" height="218"
+                                                        <img src="img/8-01.webp" width="1320" height="218"
                                                             alt="raffles University" />
                                                     </div>
                                                 </div>
@@ -668,7 +668,7 @@
                     <div class="gdlr-core-pbf-wrapper " style="padding: 125px 0px 85px 0px;">
                         <div class="gdlr-core-pbf-background-wrap">
                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                style="background-image: url(img/campus-building.png) ;background-size: cover ;background-position: center ;filter: brightness(0.2) contrast(0.85);"
+                                style="background-image: url(img/campus-building.webp) ;background-size: cover ;background-position: center ;filter: brightness(0.2) contrast(0.85);"
                                 data-parallax-speed="0.1"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -926,7 +926,7 @@
 
                     <div class="gdlr-core-pbf-wrapper " style="padding: 55px 0px 20px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"
-                            style="background-image: url(img/B34A0299.jpg) ;background-size: cover;background-position-y: -315px;">
+                            style="background-image: url(img/B34A0299.webp) ;background-size: cover;background-position-y: -315px;">
                             <div class="overlay3"></div>
                         </div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
@@ -1015,7 +1015,7 @@
                     </div>
                     <div class="gdlr-core-pbf-wrapper " style="padding: 30px 0px 0px 0px;">
                         <div class="gdlr-core-pbf-background-wrap"></div>
-                        <img src="img/MAP-01.png" style="width: 100%;" alt="map" width="1520" height="900">
+                        <img src="img/MAP-01.webp" style="width: 100%;" alt="map" width="1520" height="900">
                     </div>
 
                 </div>
