--- a/scholarships.html
+++ b/scholarships.html
@@ -144,7 +144,7 @@
 
 
             <div class="kingster-page-title-wrap  kingster-style-medium kingster-left-align"
-                style="background-image: url(img/banner3.jpg);">
+                style="background-image: url(img/banner3.webp);">
                 <div class="kingster-header-transparent-substitute"></div>
                 <div class="kingster-page-title-container kingster-container">
                     <div class="kingster-page-title-content kingster-item-pdlr">
@@ -195,7 +195,7 @@
         </div>
         <div class="gdlr-core-pbf-wrapper " style="padding: 0px 0px 0px 0px;">
             <div class="gdlr-core-pbf-background-wrap"></div>
-            <img src="img/MAP-01.png" style="width: 100%;" alt="">
+            <img src="img/MAP-01.webp" style="width: 100%;" alt="">
         </div>
 
         <div>
